...

class HomeScreen extends StatelessWidget {
  static const routeName = '/home';
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: Key('homeScreenKey'),
      backgroundColor: Colors.grey[200],
      // body: Center(
      //   child: RaisedButton(
      //     onPressed: () {
      //       Navigator.of(context).pop();
      //       Navigator.of(context).pushNamed(LoginScreen.routeName);
...
                              SizedBox(height: 49),
                              Row(
                                mainAxisAlignment:
                                    MainAxisAlignment.spaceBetween,
                                children: <Widget>[
                                  GestureDetector(
                                    key: Key('logoutbtn'),
                                    onTap: (){
                                      Provider.of<AuthProvider>(context,listen: false).logOut();
                                    },
                                    child: CircleAvatar(
                                      backgroundColor: Colors.blue,
                                      radius: 18.5,
...
