...
        reverseCurve: Curves.linear);
  }

  Future<void> _submit() async {
    try {
      await Provider.of<AuthProvider>(context, listen: false)
          .checkVerificationCode('ma@mail.com', _code, true);
      final errorMessage =
          Provider.of<AuthProvider>(context, listen: false).message;
      if (errorMessage != null) {
        toast(errorMessage);
      } else {
        Navigator.of(context).pushNamed(HomeScreen.routeName);
...
